<resources>
    <string name="app_name">CST2335</string>

    <string name="geo_data_app">Geo Data Source</string>
    <string name="geo_menu_item_search">Search Nearby Cities</string>
    <string name="geo_menu_item_saved">Saved Cities</string>
    <string name="geo_menu_item_help">Help</string>
    <string name="geo_drawer_open">Open drawer</string>
    <string name="geo_drawer_close">Close drawer</string>
    <string name="geo_hint_lat">Enter latitude</string>
    <string name="geo_hint_long">Enter longitude</string>
    <string name="geo_search_button">Search near by cities</string>
    <string name="geo_city_name">City name</string>
    <string name="geo_city_region">region</string>
    <string name="geo_city_distance_label">Distance (km): </string>
    <string name="geo_city_distance">0</string>
    <string name="geo_city_country_name">Country:</string>
    <string name="geo_city_region_name">Region:</string>
    <string name="geo_city_currency_code">Currency code:</string>
    <string name="geo_city_currency_name">Currency name:</string>
    <string name="geo_city_currency_sym">Currency symbol:</string>
    <string name="geo_city_lat">Latitude:</string>
    <string name="geo_city_lon">Longitude:</string>
    <string name="geo_open_map_text">Open in google maps</string>
    <string name="geo_city_save">Add to favourite cities</string>
    <string name="geo_city_delete">Remove from favourite cities</string>
    <string name="geo_about_author">Author:</string>
    <string name="geo_about_author_name">Gurleen Kaur Gehlan</string>
    <string name="geo_about_version">Version:</string>
    <string name="geo_about_version_name">1</string>
    <string name="geo_toast_enter_lat_lng">Please enter latitude and longitude</string>
    <string name="geo_snackbar_added">City details are removed from the list of favourite cities</string>
    <string name="geo_snackbar_deleted">City details are removed from the list of favourite cities</string>
    <string name="geo_help">- Enter latitude and longitude to get list of nearby cities.\n
        - Click on one of the cities to view detailed information.\n
        - Open drawer and select the Saved Cities to view offline saved city list.
    </string>
    <string name="geo_help_details">- Click on Open in google maps to check the map in google maps application.\n
        - Click on Add to favourite cities to save the details into the list of favourite cities, so you can check it later on.\n
        - Click on Remove from favourite cities to delete the saved city details from favourite cities.
    </string>
    <string name="geo_ok">OK</string>

    <!--  Soccer strings  -->
    <string name="soccer_app">Soccer match highlights</string>
    <string name="soccer_open_drawer">Open drawer</string>
    <string name="soccer_close_drawer">Close drawer</string>
    <string name="soccer_error_no_fav">There is no favourite matches!</string>
    <string name="soccer_recent_matches">Recent matches</string>
    <string name="soccer_favourite_matches">Favourite matches</string>
    <string name="soccer_help">Help</string>
    <string name="soccer_watch_highlights">Watch highlights</string>
    <string name="soccer_add_to_favourites">Add to Favourites</string>
    <string name="soccer_delete_from_favourites">Delete from favourites</string>
    <string name="soccer_match_date">Date: </string>
    <string name="soccer_author_key">Author:</string>
    <string name="soccer_author_value">Falguni</string>
    <string name="soccer_app_version">Version</string>
    <string name="soccer_match_added_to_list">Match has been added to favourites</string>
    <string name="soccer_match_deleted_from_list">Match has been deleted from favourites</string>
    <string name="soccer_ok">OK</string>
    <string name="soccer_help_main">- Select a match from the list to view date and highlights.\n
    - Select Favourite matches from drawer to view saved matches.</string>
    <string name="soccer_help_detail">- Click on Watch highlights to watch selected match highlights.\n
    - Click on Add to Favourites to save match details offline.\n
    - Click on Delete from favourites to delete offline saved match details.</string>

    <!--  Lyrics String  -->
    <string name="lyrics_search_app">Song Lyrics Search</string>
    <string name="enter_artist_name">Enter artist or band name</string>
    <string name="enter_song_title">Enter song title</string>
    <string name="search_for_lyrics">Search Lyrics</string>
    <string name="artist_name">Artist/Band:</string>
    <string name="song_title">Song title:</string>
    <string name="song_lyrics">Lyrics:</string>
    <string name="google_search">Search on google</string>
    <string name="add_to_favourite">Add to Favourites</string>
    <string name="remove_from_favourite">Remove from Favourites</string>
    <string name="search">Search</string>
    <string name="favourite">Favourites</string>
    <string name="lyrics_author">Author: Abdurrahman Moussa</string>
    <string name="lyrics_version">Version number: 1</string>
    <string name="lyrics_help">Help</string>
    <string name="lyrics_help_main">- Search screen: Enter artist or band name and song title to get the lyrics.\n
    - Favourite list screen: Select the list item to read the lyrics from favourites.</string>
    <string name="lyrics_help_show">- Press \'Add to Favourites\' button to save for later viewing.
    - Press \'Search on google\' button to view more details about the song on Google.</string>
    <string name="lyrics_dialog_ok">OK</string>
    <string name="lyrics_added_favourite">Added to favourites!</string>
    <string name="lyrics_removed_favourite">Removed from favourites!</string>
    <string name="lyrics_error_enter_artist_name">Enter artist or band name!</string>
    <string name="lyrics_error_enter_song_title">Enter song title!</string>
    <string name="lyrics_error_not_found">Lyrics not found!</string>
    <string name="dialog_remove_fav_lyrics">Remove from favourites</string>
    <string name="dialog_lyrics_sure">Are you sure you want to delete?</string>
    <string name="dialog_lyrics_sure_yes">Yes</string>
    <string name="dialog_lyrics_sure_no">No</string>

    <!--  Deezer song search  -->
    <string name="deezer_name">Deezer Song Search</string>
    <string name="deezer_toolbar_help">Help</string>
    <string name="deezer_hint_artist">Enter artist name</string>
    <string name="deezer_search_button">Search</string>
    <string name="deezer_favourites">Favourites</string>
    <string name="deezer_author_title">Author:</string>
    <string name="deezer_author_name">BhavinKumar Patel</string>
    <string name="deezer_version_title">Version:</string>
    <string name="deezer_version_code">1.1</string>
    <string name="deezer_activity_title">Activity title:</string>
    <string name="deezer_activity_name">Deezer Song Search api</string>
    <string name="deezer_help_diaog_ok">OK</string>
    <string name="deezer_added_to_favourites">Song details saved to favourites.</string>
    <string name="deezer_deleted_favourites">Song details deleted from favourites.</string>
    <string name="deezer_artist_title">Title:</string>
    <string name="deezer_song_duration">Duration:</string>
    <string name="deezer_album_name">Album name:</string>
    <string name="deezer_add_to_favourites">Add to favourites</string>
    <string name="deezer_delete_favourite">Remove from favourites</string>
    <string name="deezer_tracklist">Tracklist</string>
    <string name="deezer_song_details">Song details</string>
    <string name="deezer_help_1">- Enter artist name on search screen to get results.\n
    - Click on result item to get tracklist.
    - To view favourites, open drawer and select \'Favourites\'.</string>
    <string name="deezer_help_2">- Select a song from a list to view detailed information.</string>
    <string name="deezer_help_3">- To save the song details offline, click on \'Add to favourites\'.\n
    - To delete song details saved locally, click on \'Remove from favourites\'</string>
</resources>
