<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/geo_data_source_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_data_app"/>

    <Button
        android:id="@+id/buttonSoccer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soccer_app"/>

    <Button
        android:id="@+id/buttonLyricsSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lyrics_search_app"/>

    <Button
        android:id="@+id/deezer_song_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deezer_name"/>

</LinearLayout>