<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_city_name"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/city_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo_city_region"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/geo_city_distance_label"/>

        <TextView
            android:id="@+id/city_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/geo_city_distance"/>
    </LinearLayout>

</LinearLayout>